--- a/css/landingPage/style480.css
+++ b/css/landingPage/style480.css
@@ -288,6 +288,67 @@ footer .selecionado {color: #ccc;}
 
 
 
+.registro{
+  width: 100%;
+  text-align: center;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  padding: 25px;
+}
+
+.registro h3{
+  margin: 0 0 30px 5px;
+  font-weight: 300;
+  color: #012;
+  font-size: 2.2em;
+}
+
+.registro input, .registro textarea{
+  width: 100%;
+  height: 45px;
+  border: solid 1px grey;
+  border-radius: 25px;
+  padding: 0 20px;
+  transition: .4s;
+  font-size: 1em
+}
+
+.registro textarea{
+  height: 100px;
+  padding: 15px 20px;
+  border-radius: 20px;
+}
+
+.registro input:focus, .registro textarea:focus{
+  border-color: #0cc;
+  outline: none;
+}
+
+.registro input[type=submit]{
+  height: 45px;
+  border: none;
+  background-color: #012;
+  color: #fff;
+  font-size: 1em;
+  font-weight: bold;
+}
+
+.registro p, .registro a, .registro .erro{
+  font-weight: 300;
+  color: grey;
+  text-align: center;
+  max-width: 250px;
+  margin-bottom: 5px;
+}
+
+.registro a {
+  color: #09f;
+}
+
+
+
+
 
 
 
