--- a/css/landingPage/style1366.css
+++ b/css/landingPage/style1366.css
@@ -1,1 +1,380 @@
-n
+html {overflow-x: hidden;}
+
+.hamburger {display: none;}
+
+.menu ul li, .menu ul a {
+  list-style: none;
+  color: #012;
+}
+
+.title, .subtitle {margin: 0px;}
+
+.title {font-weight: normal;}
+
+header {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(255, 255, 255, .97);
+  position: fixed;
+  z-index: 3;
+  transition: ease .2s;
+  width: 100vw;
+  height: 75px;
+}
+
+.header-azul{
+  transition: ease .2s;
+  background-color: rgba(0, 28, 51, .95);
+}
+
+.header-azul .st4{
+  fill: #fff;
+  transition: ease .3s;
+}
+
+.header-azul .fullnav a {
+  color: #fff;
+}
+
+.header-azul .st0, .header-azul .st1, .header-azul .st2, .header-azul .st3{fill: #fff;}
+
+.header-inv{
+  background-color: transparent;
+  transition: ease .2s;
+}
+
+.logo {
+  width: 2.5em;
+  height: 2.5em;
+  margin: 0 20px;
+}
+.menu {
+  overflow-y: scroll;
+  justify-content: space-around;
+}
+
+.menu-buttons {
+  width: 45vw;
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  justify-content: center;
+  color: #012;
+}
+
+.menu-buttons li {
+  font-size: 1.15em;
+  margin: 10px;
+  font-weight: 600;
+}
+
+.login-btn {order: 1;}
+
+.login-btn a {
+  color: #fff!important;
+  font-weight: 400;
+  background-color: rgba(0, 205, 205, 0.7);;
+  padding: 7px 20px;
+  border-radius: 5px;
+}
+
+main {
+  display: flex;
+  flex-flow: wrap;
+}
+
+
+
+
+.banner {
+  position: relative;
+  min-height: calc(100vh - 90px);
+  width: 55%;
+  order: -2
+}
+
+.banner .bannerText {
+  padding: 90px 40px 0;
+  background-color: #ebfaff;
+  position: relative;
+  z-index: 1;
+}
+
+.banner .bannerText h1 {
+  font-weight: 500;
+  color: #036;
+  font-size: 2.1em;
+  margin: 10px 0;
+}
+
+.banner .bannerText h2 {
+  font-weight: normal;
+  color: #036;
+  font-size: 1.2em;
+  margin: 10px 0;
+}
+
+.banner .bannerText p {
+  font-weight: normal;
+  color: #666;
+  font-size: 1em;
+  margin: 5px 0 45px 0;
+}
+
+.banner .botao-banner a {
+  font-weight: bold;
+  color: #fff;
+  font-size: 1em;
+  background-color: rgba(0, 205, 205, 0.7);
+  display: inline;
+  padding: 20px;
+  border-radius: 6px;
+}
+
+.banner a {position: relative;}
+
+.saibaMais {
+  position: relative;
+  width: 100vw;
+  height: 90px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.2em;
+}
+
+.saibaMais {color: #333}
+.saibaMais i {margin-left: 10px;}
+
+.qual {
+  background-color: #012;
+  font-size: .8em;
+  color: #ccc;
+  position: relative;
+  border-radius: 30px 30px 0 50px;
+  padding: 50px 0 30px 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  flex-flow: column;
+}
+
+.animHome {
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.animHome .horario-icon {margin-bottom: 30px;}
+
+.animHome .check-icon, .animHome .notas-icon, .animHome .horario-icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 35%;
+  margin: 30px;
+}
+
+.animHome .notas-icon {margin-bottom: 50px;}
+
+.animHome svg {width: 100%}
+
+.animHome h1 {
+  width: 100%;
+  margin: 10px 0;
+  color: #fff;
+  font-weight: 300;
+
+}
+
+.animHome h2 {
+  margin: 15px 0;
+  width: 200px;
+  font-weight: 300;
+}
+
+.btm-email{
+  background-color: rgba(255, 255, 255, .2);
+  border-radius: 30px 0 0 30px;
+  min-width: 50vw;
+  width: 300px;
+  max-width: 80vw;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  padding-left: 40px;
+  margin-bottom: 20px;
+  color: #fff;
+  font-weight: 400;
+  font-size: 1.3em;
+}
+
+.qual a:nth-child(3) .btm-email {
+  background-color: rgba(0, 255, 255, .7);
+}
+
+.btm-email i {
+  font-size: .9em;
+  margin-right: 8px;
+}
+
+
+
+
+
+.enviar-email {
+  padding: 40px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.enviar-email h3{
+  margin-bottom: 35px;
+  text-align: center;
+  font-weight: 300;
+  color: #036;
+  font-size: 1.5em;
+}
+
+.enviar-email input, .enviar-email textarea{
+  width: 380px;
+  height: 50px;
+  border: solid 1px grey;
+  border-radius: 25px;
+  margin-bottom: 10px;
+  padding: 0 20px;
+  transition: .4s;
+  font-size: 1em
+}
+
+.enviar-email textarea{
+  height: 100px;
+  padding: 15px 20px;
+  border-radius: 20px;
+}
+
+.enviar-email input:focus, .enviar-email textarea:focus{
+  border-color: #0cc;
+  outline: none;
+}
+
+.enviar-email input:last-child{
+  border: none;
+  background-color: #0cc;
+  color: #fff;
+  font-size: 1em;
+  font-weight: bold;
+}
+
+
+
+
+
+footer {
+  margin: 50px;
+  border-top: solid #ccc 1px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+footer a {
+  margin: 10px 0;
+  color: #09f;
+  font-weight: 400;
+}
+
+footer a:first-child{
+  color: #ccc;
+  font-size: 1.5em
+}
+
+footer .selecionado {color: #ccc;}
+
+
+
+.registro{
+  min-height: calc(100vh - 90px);
+  text-align: center;
+  padding: 85px 25px 0 25px;
+  padding: auto;
+  order: -1;
+  width: 45%;
+  background-color: #ebfaff;
+}
+
+.form-registro {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  padding: 25px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0px -2px 17px 5px rgba(0,43,56,.1);
+}
+
+.registro h3{
+  margin: 0 0 30px 0;
+  font-weight: 300;
+  color: #012;
+  font-size: 1.5em;
+}
+
+.registro input{
+  width: 290px;
+  height: 35px;
+  border: solid 1px grey;
+  border-radius: 25px;
+  padding: 0 20px;
+  transition: .4s;
+  font-size: .9em
+}
+
+.registro input:focus{
+  border-color: #0cc;
+  outline: none;
+}
+
+.registro input[type=submit]{
+  height: 40px;
+  border: none;
+  background-color: #012;
+  color: #fff;
+  font-size: 1em;
+  font-weight: bold;
+}
+
+.registro p, .registro a, .registro .erro{
+  font-weight: 300;
+  color: grey;
+  text-align: center;
+  max-width: 250px;
+  margin-bottom: 5px;
+}
+
+.registro a {
+  color: #09f;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/**/
