--- a/css/landingPage/style1366.css
+++ b/css/landingPage/style1366.css
@@ -50,17 +50,14 @@ header {
   height: 2.5em;
   margin: 0 20px;
 }
-.menu {
-  overflow-y: scroll;
-  justify-content: space-around;
-}
 
 .menu-buttons {
   width: 45vw;
+  padding-right: 30px;
   display: flex;
   flex-flow: row;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   color: #012;
 }
 
@@ -78,6 +75,7 @@ header {
   background-color: rgba(0, 205, 205, 0.7);;
   padding: 7px 20px;
   border-radius: 5px;
+  text-align: center;
 }
 
 main {
@@ -91,11 +89,14 @@ main {
 .banner {
   position: relative;
   min-height: calc(100vh - 90px);
-  width: 55%;
-  order: -2
+  width: 50%;
+  order: -2;
 }
 
+
 .banner .bannerText {
+  min-height: 53vh;
+  text-align: center;
   padding: 90px 40px 0;
   background-color: #ebfaff;
   position: relative;
@@ -111,48 +112,31 @@ main {
 
 .banner .bannerText h2 {
   font-weight: normal;
-  color: #036;
-  font-size: 1.2em;
+  color: #023;
+  font-size: 1.3em;
   margin: 10px 0;
 }
 
 .banner .bannerText p {
   font-weight: normal;
-  color: #666;
-  font-size: 1em;
+  color: #333;
+  font-size: 1.2em;
   margin: 5px 0 45px 0;
 }
 
-.banner .botao-banner a {
-  font-weight: bold;
-  color: #fff;
-  font-size: 1em;
-  background-color: rgba(0, 205, 205, 0.7);
-  display: inline;
-  padding: 20px;
-  border-radius: 6px;
-}
+.banner .botao-banner a {display: none;}
 
-.banner a {position: relative;}
+.saibaMais {display: none;}
 
-.saibaMais {
-  position: relative;
-  width: 100vw;
-  height: 90px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.2em;
-}
 
-.saibaMais {color: #333}
-.saibaMais i {margin-left: 10px;}
+
 
 .qual {
   background-color: #012;
   font-size: .8em;
   color: #ccc;
   position: relative;
+  z-index: 2;
   border-radius: 30px 30px 0 50px;
   padding: 50px 0 30px 0;
   display: flex;
@@ -177,7 +161,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 35%;
+  width: 200px;
   margin: 30px;
 }
 
@@ -202,9 +186,7 @@ main {
 .btm-email{
   background-color: rgba(255, 255, 255, .2);
   border-radius: 30px 0 0 30px;
-  min-width: 50vw;
-  width: 300px;
-  max-width: 80vw;
+  min-width: 30vw;
   height: 50px;
   display: flex;
   align-items: center;
@@ -228,58 +210,8 @@ main {
 
 
 
-.enviar-email {
-  padding: 40px 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.enviar-email h3{
-  margin-bottom: 35px;
-  text-align: center;
-  font-weight: 300;
-  color: #036;
-  font-size: 1.5em;
-}
-
-.enviar-email input, .enviar-email textarea{
-  width: 380px;
-  height: 50px;
-  border: solid 1px grey;
-  border-radius: 25px;
-  margin-bottom: 10px;
-  padding: 0 20px;
-  transition: .4s;
-  font-size: 1em
-}
-
-.enviar-email textarea{
-  height: 100px;
-  padding: 15px 20px;
-  border-radius: 20px;
-}
-
-.enviar-email input:focus, .enviar-email textarea:focus{
-  border-color: #0cc;
-  outline: none;
-}
-
-.enviar-email input:last-child{
-  border: none;
-  background-color: #0cc;
-  color: #fff;
-  font-size: 1em;
-  font-weight: bold;
-}
-
-
-
-
-
 footer {
-  margin: 50px;
-  border-top: solid #ccc 1px;
+  margin: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -301,23 +233,26 @@ footer .selecionado {color: #ccc;}
 
 
 .registro{
-  min-height: calc(100vh - 90px);
   text-align: center;
-  padding: 85px 25px 0 25px;
+  padding: 90px 25px 0 25px;
   padding: auto;
   order: -1;
-  width: 45%;
+  width: 50%;
   background-color: #ebfaff;
 }
 
 .form-registro {
+  max-width: 380px;
+  margin: auto;
+  position: relative;
   display: flex;
   flex-flow: column;
   align-items: center;
-  padding: 25px;
+  padding: 30px;
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0px -2px 17px 5px rgba(0,43,56,.1);
+  z-index: 1;
 }
 
 .registro h3{
