--- a/css/login/style480.css
+++ b/css/login/style480.css
@@ -56,7 +56,7 @@ main {
   outline: none;
 }
 
-.login input:nth-last-child(2){
+.login input[type="submit"] {
   height: 45px;
   border: none;
   background-color: #012;
@@ -69,10 +69,9 @@ main {
   font-weight: 300;
 }
 
-.login a {
-  color: #09f;
-  text-decoration: underline;
-}
+.login a {color: #09f;}
+
+.login a:hover{text-decoration: underline;}
 
 
 footer {
