--- a/css/login/style768.css
+++ b/css/login/style768.css
@@ -2,61 +2,97 @@
 .header {
   width: 100vw;
   height: 70px;
+  position: relative;
+  z-index: 5;
 }
+
+.fullnav{
+  background-color: #012!important;
+}
+
+.fullnav a {
+  color: #fff!important;
+}
+
+.st0, .st1, .st2, .st3{fill: #fff!important;}
+
 
 .logo {
-  width: 2.6em;
-  height: 2.6em;
-  margin-left: 15px;
+  width: 2.5em;
+  height: 2.5em;
+  margin: 0 15px;
 }
 
-.hamburger{
-  width: 70px;
-  height: 100%;
+
+main {
+  min-height: calc(100vh - 204px);
+  display: flex;
+  justify-content: center;
+  padding: 30px 35px;
 }
 
-.hamburger svg{
-  width: 1.2em;
+.login{width: 400px;}
+
+.login h3{
+  margin: 0 0 30px 5px;
+  font-weight: 300;
+  color: #012;
+  font-size: 2.2em;
 }
 
-.fullnav {
-  bottom: 0%;
-  top: 0%;
-  flex-flow: column;
+.login input{
+  width: 400px;
+  height: 45px;
+  border: solid 1px grey;
+  border-radius: 25px;
+  margin-bottom: 20px;
+  padding: 0 20px;
+  transition: .4s;
+  font-size: 1em
+}
+
+.login input:focus{
+  border-color: #0cc;
+  outline: none;
+}
+
+.login input[type="submit"]{
+  height: 45px;
+  border: none;
+  background-color: #012;
+  color: #fff;
+  font-size: 1em;
+  font-weight: bold;
+}
+
+.login p, .login a{
+  font-weight: 300;
+}
+
+.login a {color: #09f;}
+
+.login a:hover{text-decoration: underline;}
+
+
+
+footer {
+  margin: 50px;
+  border-top: solid #ccc 1px;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  right: -100vw;
-  background: #051523;
 }
 
-.menu {
-  width: 100vw;
-  overflow-y: scroll;
+footer a {
+  margin: 10px 0;
+  color: #09f;
+  font-weight: 400;
 }
 
-hr {
-  width: 75vw;
-  color: #c9c9c9;
-  margin: 30px 0;
+footer a:first-child{
+  margin-top: 30px;
 }
 
-.menu-buttons {min-height: 350px;}
+footer .selecionado {color: #ccc;}
 
-.menu-buttons li {font-size: 1.6em}
-
-.menu-buttons i {
-  font-size: .9em;
-  margin-right: 4px
-}
-
-.title, .subtitle {font-size: 1.3em;}
-
-.title {font-size: 1.4em}
-
-.profile-photo-menu {
-  width: 25%;
-  padding-top: 25%;
-  border-radius: 160px;
-  margin: 70px 0 20px;
-}
-
-.active-menu .fullnav {right: 0;}
+/**/
