--- a/css/landingPage/style1024.css
+++ b/css/landingPage/style1024.css
@@ -153,7 +153,7 @@ main {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   text-align: center;
 }
@@ -180,7 +180,8 @@ main {
 
 }
 
-.animHome h2 {
+.qual p {
+  font-size: 1.5em;
   margin: 15px 0;
   width: 200px;
   font-weight: 300;
@@ -258,7 +259,7 @@ footer .selecionado {color: #ccc;}
   z-index: 1;
 }
 
-.registro h3{
+.registro h2{
   margin: 0 0 30px 0;
   font-weight: 300;
   color: #012;
