--- a/css/landingPage/style480.css
+++ b/css/landingPage/style480.css
@@ -227,7 +227,8 @@
 
 }
 
-.animHome h2 {
+.qual p {
+  font-size: 1.5em;
   margin: 15px 0;
   width: 200px;
   font-weight: 300;
@@ -265,7 +266,7 @@
   padding: 40px 25px
 }
 
-.registro h3{
+.registro h2{
   margin-bottom: 25px;
   text-align: center;
   font-weight: 300;
@@ -343,7 +344,7 @@ footer .selecionado {color: #ccc;}
   padding: 25px;
 }
 
-.registro h3{
+.registro h2{
   margin: 0 0 30px 5px;
   font-weight: 300;
   color: #012;
