--- a/css/landingPage/style768.css
+++ b/css/landingPage/style768.css
@@ -230,7 +230,8 @@
 
 }
 
-.animHome h2 {
+.qual p {
+  font-size: 1.5em;
   margin: 15px 0;
   width: 200px;
   font-weight: 300;
@@ -272,7 +273,7 @@
   align-items: center;
 }
 
-.registro h3{
+.registro h2{
   margin-bottom: 35px;
   text-align: center;
   font-weight: 300;
@@ -349,7 +350,7 @@ footer .selecionado {color: #ccc;}
   margin: auto;
 }
 
-.registro h3{
+.registro h2{
   margin: 0 0 30px 5px;
   font-weight: 300;
   color: #012;
