--- a/css/chamada-ocorrencia/chamada_ocorrencia1024.css
+++ b/css/chamada-ocorrencia/chamada_ocorrencia1024.css
@@ -1,64 +1,82 @@
+.header {
+  width: calc(100% - 280px);
+  height: 7vh;
 
-    .header {
-  width: 100vw;
-  height: 80px;
 }
 
 .logo {
-  width: 2.7em;
-  height: 2.7em;
-  margin-left: 20px;
+  position: relative;
+  left: calc(100% - (-15em));
+  top: 5px;
+  width: 2em;
+  height: 2em;
 }
 
-.hamburger{
-  width: 80px;
-  height: 100%;
-}
+.header .st0{fill:#fff;}
+.header .st1{fill:#fff;}
+.header .st2{fill:#fff;}
+.header .st3{fill:#fff;}
 
-.hamburger svg{width: 1.3em;}
+.hamburger{display: none!important;}
 
 .fullnav {
+  width: 280px;
   bottom: 0%;
   top: 0%;
-  flex-flow: column;
-  align-items: center;
-  right: -100vw;
-  background: #051523;
+  right: 0;
+  background: rgba(0,204,204,1);
+  background: linear-gradient(to bottom, rgba(0,204,204,1) 0%, rgba(0,204,204,1) 30%, rgba(0,102,204,1) 100%);
 }
 
 .menu {
-  width: 100vw;
-  overflow-y: scroll;
+  width: 230px;
+  justify-content: space-around;
+  background: #051523;
 }
 
-hr {
-  width: 60vw;
-  color: #c9c9c9;
-  margin: 50px 0;
+hr {display: none; border: none;}
+
+.menu-buttons {
+  margin-top: calc(60px + 5vh);
+  flex-grow: 2;
+  align-items: flex-end!important;
+  position: relative;
+  right: -57px
 }
 
-.menu-buttons {min-height: 350px;}
-
-.menu-buttons li {font-size: 1.7em}
+.menu-buttons li a{
+  font-size: 1em;
+  display:flex;
+  flex-direction: row-reverse;
+  align-items:center;
+}
 
 .menu-buttons i {
-  font-size: .9em;
-  margin-right: 5px
+  font-size: 1.3em;
+  margin-left: 60px
 }
 
-.title, .subtitle {font-size: 1.4em;}
+.title, .subtitle {font-size: 1em;}
 
-.title {font-size: 1.5em}
+.title {font-size: 1em}
 
 .profile-photo-menu {
-  width: 18%;
-  padding-top: 18%;
-  border-radius: 150px;
-  margin: 100px 0 20px;
-
+  width: 120px;
+  height: 120px;
+  border-radius: 60px;
+  margin: calc(30px + 3vh) 0 30px;
 }
 
-.active-menu .fullnav {right: 0;}
+main {background-color: #f1f1f1; width: 100vw; height: 100vh; }
+
+#pagina{
+  /*  width:79.3%;*/
+   /* margin-right:18.5%*/
+   position: relative;
+   width: calc(100% - 280px);
+}
+
+    
 
   /********* INICIO CABECALHO****************/
 
@@ -75,7 +93,7 @@ hr {
    #sala{
     color:white;
     font-family: Roboto;
-    font-size: 1.125em;
+    font-size: 1.4em;
     margin-left: 20%;
     display:flex;
     font-weight: bold;
@@ -321,25 +339,61 @@ select:focus {
             font-size: 1.4em;
           }
 
-          input[type=submit]{
-            background-color: #00cccc;
+          input[type="submit"]{
+            color:white;
+            background-color: rgb(0, 205, 205);
+            padding: 10px;
+            text-decoration: none;
+            border-radius: 10px;
+            text-align: center;
+            width: 50%;
+            margin-left:25%;
+            margin-top: 20px;
+            font-size:1.165em;
             outline: none;
-            margin-left:43%;
-            margin-top:5%;
-            box-sizing: content-box;
-          font-family: Roboto;
-          font-size: 1.25em;
-          border: solid 1px #ccc;
-          padding: 10px 10px 9px 10px;
-          width: 15%;
-          border-radius: 50px;
-          background-color: #00cccc;
-          border-color: #007acc;
-          color:white;
-          }
+          border:none;
+            }
+    
+               
+.select-style {
+  border: none;
+  border-bottom: 2px solid white;
+  width: 100%;
+  border-radius: 3px;
+  overflow: hidden;
+  background: none;
+  font-weight: bold;
+  font-size: 1.5em;
+  margin-top:3px;
+  text-align:center;
+  color:white;
+  display:flex;
+ flex-flow: column;
+align-items: center;
+
+    
+ 
+}
+
+.select-style select {
+ 
+  width: 100%;
+  border: none;
+  font-size: 1.125em;
+
+  /*box-shadow: none;
+  background: transparent;
+  background-image: none;*/
+  /*-webkit-appearance: none;*/
+}
+.select-style option{
+  color:black
+}
       
-          input[type=submit]:hover{
-            background-color:#007acc;
-            transition: ease-in-out 3ms;
-          }
-      
+
+
+.erros{
+  margin-top:15px;
+  color:rgb(109, 108, 108);
+  text-align:center;
+}
