--- a/css/chamada-ocorrencia/chamada_ocorrencia1366.css
+++ b/css/chamada-ocorrencia/chamada_ocorrencia1366.css
@@ -1,362 +1,399 @@
 .header {
-    width: calc(100% - 280px);
-    height: 7vh;
-  
-  }
-  
-  .logo {
-    position: relative;
-    left: calc(100% - (-15em));
-    top: 5px;
-    width: 2em;
-    height: 2em;
-  }
-  
-  .header .st0{fill:#fff;}
-  .header .st1{fill:#fff;}
-  .header .st2{fill:#fff;}
-  .header .st3{fill:#fff;}
-  
-  .hamburger{display: none!important;}
-  
-  .fullnav {
-    width: 280px;
-    bottom: 0%;
-    top: 0%;
-    right: 0;
-    background: rgba(0,204,204,1);
-    background: linear-gradient(to bottom, rgba(0,204,204,1) 0%, rgba(0,204,204,1) 30%, rgba(0,102,204,1) 100%);
-  }
-  
-  .menu {
-    width: 230px;
-    justify-content: space-around;
-    background: #051523;
-  }
-  
-  hr {display: none; border: none;}
-  
-  .menu-buttons {
-    margin-top: calc(60px + 5vh);
-    flex-grow: 2;
-    align-items: flex-end!important;
-    position: relative;
-    right: -57px
-  }
-  
-  .menu-buttons li a{
-    font-size: 1em;
-    display:flex;
-    flex-direction: row-reverse;
-    align-items:center;
-  }
-  
-  .menu-buttons i {
-    font-size: 1.3em;
-    margin-left: 60px
-  }
-  
-  .title, .subtitle {font-size: 1em;}
-  
-  .title {font-size: 1em}
-  
-  .profile-photo-menu {
-    width: 120px;
-    height: 120px;
-    border-radius: 60px;
-    margin: calc(30px + 3vh) 0 30px;
-  }
-  
-  main {background-color: #f1f1f1; width: 100vw; height: 100vh; }
+  width: calc(100% - 280px);
+  height: 7vh;
 
- #pagina{
-    /*  width:79.3%;*/
-     /* margin-right:18.5%*/
-     position: relative;
-     width: calc(100% - 280px);
-  }
-
-  /********* INICIO CABECALHO****************/
-
-#cabecalho{
-    padding-top:60px;
-      width: 100%;
-      height:190px;
-      background-color: #00cccc;
-  }
-  #seta{
-    margin-left:20px;
-    
-  }
-   #sala{
-    color:white;
-    font-family: Roboto;
-    font-size: 1.125em;
-    margin-left: 20%;
-    display:flex;
-    font-weight: bold;
-  }
-  
-  #horaSala {
-      float:right;
-      color:white;
-      font-family: Roboto;
-      margin-top: -38px;
-      margin-right: 25%;
-      font-weight: bold;
-      line-height: 1.3;
-  }
-  
-  #hora{
-   font-size: 1.125em;
-  }
-  
-  #sala-atual{
-      text-align: center;
-  }
-  
-
-  
-/* ********** NAVEGAÇÃO DE ABAS ***********/
-button:focus,
-input:focus,
-textarea:focus,
-select:focus {
-  outline: none; }
-
-.tabs {
-  display: block;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: flex;
-  -webkit-flex-wrap: wrap;
-  -moz-flex-wrap: wrap;
-  flex-wrap: wrap;
-  margin: 0;
-  overflow: hidden;
- }
- #nometab{
-   color:#00cccc
- }
-
-  .tabs [class^="tab"] label,
-  .tabs [class*=" tab"] label {
-    color: #00cccc;
-    cursor: pointer;
-    display: block;
-    font-size: 1.1em;
-    font-weight: bold;
-    line-height: 1em;
-    padding: 1rem 0;
-    text-align: center;
-    font-family:roboto;
 }
 
-  .tabs [class^="tab"] [type="radio"],
-  .tabs [class*=" tab"] [type="radio"] {
-    border-bottom: 1px solid rgba(239, 237, 239, 0.5);
-    cursor: pointer;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    display: block;
-    width: 100%;
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
- }
- 
-    .tabs [class^="tab"] [type="radio"]:hover, .tabs [class^="tab"] [type="radio"]:focus,
-    .tabs [class*=" tab"] [type="radio"]:hover,
-    .tabs [class*=" tab"] [type="radio"]:focus {
-      border-bottom: 3px solid #00cccc; 
-    
+.logo {
+  position: relative;
+  left: calc(100% - (-15em));
+  top: 5px;
+  width: 2em;
+  height: 2em;
 }
 
-    .tabs [class^="tab"] [type="radio"]:checked,
-    .tabs [class*=" tab"] [type="radio"]:checked {
-      border-bottom: 3px solid #00cccc; 
-    }
+.header .st0{fill:#fff;}
+.header .st1{fill:#fff;}
+.header .st2{fill:#fff;}
+.header .st3{fill:#fff;}
 
-    .tabs [class^="tab"] [type="radio"]:checked + div,
-    .tabs [class*=" tab"] [type="radio"]:checked + div {
-      opacity: 1; 
-    }
+.hamburger{display: none!important;}
 
-
-    .tabs [class^="tab"] [type="radio"] + div,
-    .tabs [class*=" tab"] [type="radio"] + div {
-      display: block;
-      opacity: 0;
-      padding: 2rem 0;
-      width: 90%;
-      -webkit-transition: all 0.5s ease-in-out;
-      -moz-transition: all 0.5s ease-in-out;
-      -o-transition: all 0.5s ease-in-out;
-      transition: all 0.5s ease-in-out; 
-    }
-
-  .tabs .tab-2 {
-    width: 50%; 
-    
+.fullnav {
+  width: 280px;
+  bottom: 0%;
+  top: 0%;
+  right: 0;
+  background: rgba(0,204,204,1);
+  background: linear-gradient(to bottom, rgba(0,204,204,1) 0%, rgba(0,204,204,1) 30%, rgba(0,102,204,1) 100%);
 }
 
-    .tabs .tab-2 [type="radio"] + div {
-      width: 200%;
-      margin-left: 200%;
-     }
+.menu {
+  width: 230px;
+  justify-content: space-around;
+  background: #051523;
+}
 
-    .tabs .tab-2 [type="radio"]:checked + div {
-      margin-left: 0; 
-    }
-    .tabs .tab-2:last-child [type="radio"] + div {
-      margin-left: 100%; 
-    }
-    .tabs .tab-2:last-child [type="radio"]:checked + div {
-      margin-left: -100%; 
-    }
+hr {display: none; border: none;}
+
+.menu-buttons {
+  margin-top: calc(60px + 5vh);
+  flex-grow: 2;
+  align-items: flex-end!important;
+  position: relative;
+  right: -57px
+}
+
+.menu-buttons li a{
+  font-size: 1em;
+  display:flex;
+  flex-direction: row-reverse;
+  align-items:center;
+}
+
+.menu-buttons i {
+  font-size: 1.3em;
+  margin-left: 60px
+}
+
+.title, .subtitle {font-size: 1em;}
+
+.title {font-size: 1em}
+
+.profile-photo-menu {
+  width: 120px;
+  height: 120px;
+  border-radius: 60px;
+  margin: calc(30px + 3vh) 0 30px;
+}
+
+main {background-color: #f1f1f1; width: 100vw; height: 100vh; }
+
+#pagina{
+  /*  width:79.3%;*/
+   /* margin-right:18.5%*/
+   position: relative;
+   width: calc(100% - 280px);
+}
+
     
-    /**************  SEÇÃO - CHAMADA ******************/
-
-
-    #lista{
-        display: flex;
-          flex-direction: row;
-       justify-content: space-around;
-        align-items: center;
-        border-bottom:1px solid #ccc;
-        padding:20px;
     
-          }
-      
-          #legenda{
-        font-family: roboto;
-        margin-top:0px;
-        margin-bottom:15px;
-        display: flex;
-        flex-direction:row;
-        justify-content: space-evenly;
-        align-items: center;
-        width:100%;
-        margin-left:-5%;
-       
-      
-        }
-      
-          #vermelho{
-            background-color: red;
-            border-radius: 50%;
-            width: 18px;
-            height:18px;
-      
-          }
-      
-          #verde{
-            background-color:#4ed164;
-            border-radius: 50%;
-            width: 18px;
-            height: 18px;
-      
-          }
-          #ausPres{
-              margin-left:25px;
-             
-          }
-         
-      
-          #scroll{
-            overflow-x: hidden; /* Hide horizontal scrollbar */
-            overflow-y: scroll; /* Add vertical scrollbar */
-            width: auto;
-            height: 550px;
-           
-          }
-          input.apple-switch {
-         margin-left: 50px;
-            position: relative;
-            -webkit-appearance: none;
-            outline: none;
-            width: 50px;
-            height: 30px;
-            background-color: #fff;
-            border: 1px solid #D9DADC;
-            border-radius: 50px;
-            box-shadow: inset -20px 0px 0px 0px rgb(255, 0, 0);
-            transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
-          }
-          
-          input.apple-switch:after {
-            content: "";
-            position: absolute;
-            top: 1px;
-            left: 1px;
-            background: transparent;
-            width: 26px;
-            height: 26px;
-            border-radius: 50%;
-            box-shadow: 2px 4px 6px rgba(0,0,0,0.2);
-          }
-          
-          input.apple-switch:checked {
-            box-shadow: inset 20px 0 0 0 #4ed164;
-            border-color: #4ed164;
-          }
-          
-          input.apple-switch:checked:after {
-            left: 20px;
-            box-shadow: -2px 4px 3px rgba(0,0,0,0.05);
-          }
-      
-      
-          /*************** SEÇÃO OCORRÊNCIAS*****************/
-      
-          #dadosAluno{
-        display: flex;
-        flex-direction: row;
-       justify-content: space-around;
-        align-items: center;
-        border-bottom:1px solid #ccc ;
-        padding:10px;
-        margin-left:5%;
-        margin-right:5%;
-
-          }
-      
-          #imgAluno{
-            width:95px;
-            height: 95px;
-          }
-      
-          p{
-            text-align:center;
-            font-size:0.8em;
-          }
-      
-          #ocorrencia_nomeAluno{
-            font-size: 1.4em;
-          }
-
-
-          input[type=submit]{
-            background-color: #00cccc;
-            outline: none;
-            margin-left:43%;
-            margin-top:5%;
-            box-sizing: content-box;
-          font-family: Roboto;
-          font-size: 1.25em;
-          border: solid 1px #ccc;
-          padding: 10px 10px 9px 10px;
-          width: 15%;
-          border-radius: 50px;
+      /********* INICIO CABECALHO****************/
+    
+    #cabecalho{
+        padding-top:60px;
+          width: 100%;
+          height:190px;
           background-color: #00cccc;
-          border-color: #007acc;
+      }
+      #seta{
+        margin-left:20px;
+        margin-top: 20px;  
+      }
+       #sala{
+        color:white;
+        font-family: Roboto;
+        font-size: 1.4em;
+        margin-left: 20%;
+        display:flex;
+        font-weight: bold;
+      }
+      
+      #horaSala {
+          float:right;
           color:white;
-          }
+          font-family: Roboto;
+          margin-top: -38px;
+          margin-right: 25%;
+          font-weight: bold;
+          line-height: 1.3;
+      }
       
-          input[type=submit]:hover{
-            background-color:#007acc;
-            transition: ease-in-out 3ms;
-          }
+      #hora{
+       font-size: 1.125em;
+      }
       
+      #sala-atual{
+          text-align: center;
+      }
+      
+    
+      
+    /* ********** NAVEGAÇÃO DE ABAS ***********/
+    button:focus,
+    input:focus,
+    textarea:focus,
+    select:focus {
+      outline: none; }
+    
+    .tabs {
+      display: block;
+      display: -webkit-flex;
+      display: -moz-flex;
+      display: flex;
+      -webkit-flex-wrap: wrap;
+      -moz-flex-wrap: wrap;
+      flex-wrap: wrap;
+      margin: 0;
+      overflow: hidden;
+     }
+     #nometab{
+       color:#00cccc
+     }
+    
+      .tabs [class^="tab"] label,
+      .tabs [class*=" tab"] label {
+        color: #00cccc;
+        cursor: pointer;
+        display: block;
+        font-size: 1.1em;
+        font-weight: bold;
+        line-height: 1em;
+        padding: 1rem 0;
+        text-align: center;
+        font-family:roboto;
+    }
+    
+      .tabs [class^="tab"] [type="radio"],
+      .tabs [class*=" tab"] [type="radio"] {
+        border-bottom: 1px solid rgba(239, 237, 239, 0.5);
+        cursor: pointer;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        display: block;
+        width: 100%;
+        -webkit-transition: all 0.5s ease-in-out;
+        -moz-transition: all 0.5s ease-in-out;
+        -o-transition: all 0.5s ease-in-out;
+        transition: all 0.5s ease-in-out;
+     }
+     
+        .tabs [class^="tab"] [type="radio"]:hover, .tabs [class^="tab"] [type="radio"]:focus,
+        .tabs [class*=" tab"] [type="radio"]:hover,
+        .tabs [class*=" tab"] [type="radio"]:focus {
+          border-bottom: 3px solid #00cccc; 
+        
+    }
+    
+        .tabs [class^="tab"] [type="radio"]:checked,
+        .tabs [class*=" tab"] [type="radio"]:checked {
+          border-bottom: 3px solid #00cccc; 
+        }
+    
+        .tabs [class^="tab"] [type="radio"]:checked + div,
+        .tabs [class*=" tab"] [type="radio"]:checked + div {
+          opacity: 1; 
+        }
+    
+    
+        .tabs [class^="tab"] [type="radio"] + div,
+        .tabs [class*=" tab"] [type="radio"] + div {
+          display: block;
+          opacity: 0;
+          padding: 2rem 0;
+          width: 90%;
+          -webkit-transition: all 0.5s ease-in-out;
+          -moz-transition: all 0.5s ease-in-out;
+          -o-transition: all 0.5s ease-in-out;
+          transition: all 0.5s ease-in-out; 
+        }
+    
+      .tabs .tab-2 {
+        width: 50%; 
+        
+    }
+    
+        .tabs .tab-2 [type="radio"] + div {
+          width: 200%;
+          margin-left: 200%;
+         }
+    
+        .tabs .tab-2 [type="radio"]:checked + div {
+          margin-left: 0; 
+        }
+        .tabs .tab-2:last-child [type="radio"] + div {
+          margin-left: 100%; 
+        }
+        .tabs .tab-2:last-child [type="radio"]:checked + div {
+          margin-left: -100%; 
+        }
+        
+        /**************  SEÇÃO - CHAMADA ******************/
+    
+    
+        #lista{
+            display: flex;
+              flex-direction: row;
+           justify-content: space-around;
+            align-items: center;
+            border-bottom:1px solid #ccc;
+            padding:20px;
+        
+              }
+          
+              #legenda{
+            font-family: roboto;
+            margin-top:0px;
+            margin-bottom:15px;
+            display: flex;
+            flex-direction:row;
+            justify-content: space-evenly;
+            align-items: center;
+            width:100%;
+            margin-left:-5%;
+           
+          
+            }
+          
+              #vermelho{
+                background-color: red;
+                border-radius: 50%;
+                width: 18px;
+                height:18px;
+          
+              }
+          
+              #verde{
+                background-color:#4ed164;
+                border-radius: 50%;
+                width: 18px;
+                height: 18px;
+          
+              }
+              #ausPres{
+                  margin-left:25px;
+                 
+              }
+             
+          
+              #scroll{
+                overflow-x: hidden; /* Hide horizontal scrollbar */
+                overflow-y: scroll; /* Add vertical scrollbar */
+                width: auto;
+                height: 550px;
+               
+              }
+              input.apple-switch {
+             margin-left: 50px;
+                position: relative;
+                -webkit-appearance: none;
+                outline: none;
+                width: 50px;
+                height: 30px;
+                background-color: #fff;
+                border: 1px solid #D9DADC;
+                border-radius: 50px;
+                box-shadow: inset -20px 0px 0px 0px rgb(255, 0, 0);
+                transition: all 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
+              }
+              
+              input.apple-switch:after {
+                content: "";
+                position: absolute;
+                top: 1px;
+                left: 1px;
+                background: transparent;
+                width: 26px;
+                height: 26px;
+                border-radius: 50%;
+                box-shadow: 2px 4px 6px rgba(0,0,0,0.2);
+              }
+              
+              input.apple-switch:checked {
+                box-shadow: inset 20px 0 0 0 #4ed164;
+                border-color: #4ed164;
+              }
+              
+              input.apple-switch:checked:after {
+                left: 20px;
+                box-shadow: -2px 4px 3px rgba(0,0,0,0.05);
+              }
+          
+          
+              /*************** SEÇÃO OCORRÊNCIAS*****************/
+          
+              #dadosAluno{
+            display: flex;
+            flex-direction: row;
+           justify-content: space-around;
+            align-items: center;
+            border-bottom:1px solid #ccc ;
+            padding:10px;
+            margin-left:5%;
+            margin-right:5%;
+    
+              }
+          
+              #imgAluno{
+                width:95px;
+                height: 95px;
+              }
+          
+              p{
+                text-align:center;
+                font-size:0.8em;
+              }
+          
+              #ocorrencia_nomeAluno{
+                font-size: 1.4em;
+              }
+    
+              input[type="submit"]{
+                color:white;
+                background-color: rgb(0, 205, 205);
+                padding: 10px;
+                text-decoration: none;
+                border-radius: 10px;
+                text-align: center;
+                width: 50%;
+                margin-left:25%;
+                margin-top: 20px;
+                font-size:1.165em;
+                outline: none;
+              border:none;
+                }
+        
+                   
+    .select-style {
+      border: none;
+      border-bottom: 2px solid white;
+      width: 100%;
+      border-radius: 3px;
+      overflow: hidden;
+      background: none;
+      font-weight: bold;
+      font-size: 1.5em;
+      margin-top:3px;
+      text-align:center;
+      color:white;
+      display:flex;
+     flex-flow: column;
+    align-items: center;
+    
+        
+     
+    }
+    
+    .select-style select {
+     
+      width: 100%;
+      border: none;
+      font-size: 1.125em;
+    
+      /*box-shadow: none;
+      background: transparent;
+      background-image: none;*/
+      /*-webkit-appearance: none;*/
+    }
+    .select-style option{
+      color:black
+    }
+          
+    
+    
+    .erros{
+      margin-top:15px;
+      color:rgb(109, 108, 108);
+      text-align:center;
+    }
