--- a/css/perfilProfessor/style1366.css
+++ b/css/perfilProfessor/style1366.css
@@ -43,6 +43,16 @@ hr {display: none; border: none;}
   right: -57px
 }
 
+.menu-buttons li{padding: 10px; width: 100%}
+
+.menu-buttons .atual{
+  background: linear-gradient(to right, rgba(246, 246, 246, 0) 0%, rgba(255, 255, 255, 0.596) 100%); 
+  border-right: solid 5px white; 
+  padding-right: 5px;
+}
+
+.menu-buttons li:hover{background: linear-gradient(to right, rgba(246, 246, 246, 0) 0%, rgba(255, 255, 255, 0.596) 100%);}
+
 .menu-buttons li a{
   font-size: 1em;
   display:flex;
