--- a/css/chamada-ocorrencia/chamada_ocorrencia1366.css
+++ b/css/chamada-ocorrencia/chamada_ocorrencia1366.css
@@ -275,40 +275,57 @@ main {background-color: #f1f1f1; width: 100vw; height: 100vh; }
                
               }
               input.apple-switch {
-             margin-left: 50px;
+                position: relative;
+              -webkit-appearance: none;
+              outline: none;
+              width: 50px;
+              height: 30px;
+              background-color: #fff;
+              border: 1px solid #4ed164;
+              border-radius: 50px;
+              box-shadow: inset 20px 0 0 0 #4ed164;
+              border-color: #4ed164;
+              margin-left: 50px;      
+              transition: all 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);  
+              }
+              
+              input.apple-switch:after {
+               content: "";
+              position: absolute;
+              top: 1px;
+              left: 1px;
+              background: transparent;
+              width: 26px;
+              height: 26px;
+              border-radius: 50%;
+  
+               
+              }
+              
+              input.apple-switch:checked {
                 position: relative;
                 -webkit-appearance: none;
                 outline: none;
                 width: 50px;
                 height: 30px;
                 background-color: #fff;
-                border: 1px solid #D9DADC;
+                border: 1px solid rgb(255, 74, 74);
                 border-radius: 50px;
-                box-shadow: inset -20px 0px 0px 0px rgb(255, 0, 0);
-                transition: all 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
-              }
-              
-              input.apple-switch:after {
-                content: "";
-                position: absolute;
-                top: 1px;
-                left: 1px;
-                background: transparent;
-                width: 26px;
-                height: 26px;
-                border-radius: 50%;
-                box-shadow: 2px 4px 6px rgba(0,0,0,0.2);
-              }
-              
-              input.apple-switch:checked {
-                box-shadow: inset 20px 0 0 0 #4ed164;
-                border-color: #4ed164;
+                box-shadow: inset -20px 0 0 0 red;
               }
               
               input.apple-switch:checked:after {
-                left: 20px;
-                box-shadow: -2px 4px 3px rgba(0,0,0,0.05);
+                content: "";
+               position: absolute;
+                top: 1px;
+                left: 1px;
+                background: transparent;
+               width: 26px;
+               height: 26px;
+              border-radius: 50%;
+                box-shadow: 2px 4px 6px rgba(0,0,0,0.2);
               }
+          
           
           
               /*************** SEÇÃO OCORRÊNCIAS*****************/
