--- a/css/lista_salas/lista_salas1024.css
+++ b/css/lista_salas/lista_salas1024.css
@@ -156,8 +156,8 @@ input::-webkit-input-placeholder {
 }
 
 #circulo-box{
-	width: 70px;
-	height:70px;
+	width: 75px;
+	height:75px;
 	background-color: #003366;
 	border-radius: 50%;
 	color:white;
@@ -169,10 +169,10 @@ input::-webkit-input-placeholder {
 }
 
 h2{
-	margin-top:9px;
-	font-size: 1.3em;
+	margin-top:25px;
+  font-size: 1.125em;
+  margin-left:4px;
 }
-
 #links{
 	float: right;
 	margin-top: -73px;
