--- a/css/lista_salas/lista_salas768.css
+++ b/css/lista_salas/lista_salas768.css
@@ -153,8 +153,8 @@ input::-webkit-input-placeholder {
 }
 
 #circulo-box{
-	width: 70px;
-	height:70px;
+	width: 75px;
+	height:75px;
 	background-color: #003366;
 	border-radius: 50%;
 	color:white;
@@ -166,8 +166,9 @@ input::-webkit-input-placeholder {
 }
 
 h2{
-	margin-top:9px;
-	font-size: 1.3em;
+	margin-top:25px;
+  font-size: 1.125em;
+  margin-left:4px;
 }
 
 #links{
