--- a/css/cssOperacaoCurso/style1366.css
+++ b/css/cssOperacaoCurso/style1366.css
@@ -1,104 +1,87 @@
-body{
-    background-color: blue;
-}
-/*
-*{
-    margin:0;
-    padding:0;
-}
 
-body{
-    background-color: #fff
+.logo {
+  position: relative;
+  left: calc(100vw - 2em - 8px);
+  top: 5px;
+  width: 2em;
+  height: 2em;
 }
 
-.headerPrimeiroAcesso{
-    background-color: #003366;
-    width: 100%;
-    height: 60px;
-    border-bottom: 10px solid #00CCCC;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin-bottom: 50px;
-}
-.headerPrimeiroAcesso a img{
-    width: 80px;
-    height: 80px;
+.header .st0{fill:#fff;}
+.header .st1{fill:#fff;}
+.header .st2{fill:#fff;}
+.header .st3{fill:#fff;}
 
-}
+.hamburger{display: none!important;}
 
-.recebeDados{
-    border:none;
-    display: flex;
-    justify-content: center;
-
+.fullnav {
+  width: 280px;
+  bottom: 0%;
+  top: 0%;
+  right: 0;
+  background: rgba(0,204,204,1);
+  background: linear-gradient(to bottom, rgba(0,204,204,1) 0%, rgba(0,204,204,1) 30%, rgba(0,102,204,1) 100%);
 }
 
-.blank{
-    margin-bottom: 50px;
+.menu {
+  width: 230px;
+  justify-content: space-around;
+  background: #051523;
 }
 
-.table-remove{
-    float: right
-}   
+hr {display: none; border: none;}
 
-.acessoUm{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.menu-buttons {
+  margin-top: calc(60px + 5vh);
+  flex-grow: 2;
+  align-items: flex-end!important;
+  position: relative;
+  right: -57px
+}
+
+.menu-buttons li{padding: 10px; width: 100%}
+
+.menu-buttons .atual{
+  background: linear-gradient(to right, rgba(246, 246, 246, 0) 0%, rgba(255, 255, 255, 0.596) 100%); 
+  border-right: solid 5px white; 
+  padding-right: 5px;
+}
+
+.menu-buttons li:hover{background: linear-gradient(to right, rgba(246, 246, 246, 0) 0%, rgba(255, 255, 255, 0.596) 100%);}
+
+.menu-buttons li a{
+  font-size: 1em;
+  display:flex;
+  flex-direction: row-reverse;
+  align-items:center;
+}
+
+.menu-buttons i {
+  font-size: 1.3em;
+  margin-left: 60px
+}
+
+.title, .subtitle {font-size: 1em;}
+
+.title {font-size: 1em}
+
+.profile-photo-menu {
+  width: 120px;
+  height: 120px;
+  border-radius: 60px;
+  margin: calc(30px + 3vh) 0 30px;
+}
+
+main {
+  width: calc(100% - 280px);
+  height: 100vh;
+  overflow-y: scroll;
+  padding: 90px 65px 0;
+
+  display: flex;
+  align-items: center;
     flex-direction: column;
-    flex-wrap: wrap;
-
 }
-.acessoUm p {
-    font-size: 20px;
-    
-    max-width: 500px;
-}
-p.vsf{
-    font-size: 16px;
-    color: #666;
-    padding: 10px;
-    text-align: center;
-}
-.perfil-foto{
-    width: 176px;
-    height:176px;
-    border-radius: 25px;
-    z-index: 1;
-}
-.acessoUm form{
-    text-align: left;
-    padding: 30px;
-    
-}
-.acessoUm form h2{
-    font-size: 30px;
-    color: #003366;
-    margin: 5px;
-    text-align: center;
-}
-.acessoUm label{
-
-    font-size: 20px;
-    display: block;
-}
-.acessoUm input{
-    margin-bottom: 10px;
-    height: 30px;
-    width: 700px;
-    border:none;
-    border-bottom: 3px solid #666;
-
-}
-
-
- 
-
-
-/****/
-
-
 
 .puto {
     display: flex;
@@ -107,53 +90,88 @@ p.vsf{
 }
 
 input.buttonNext {
-    text-align: center;
-    width: 200px;
-    height: 50px;
-    font-size: 26px;
-    background: #00CCCC;
-    font-weight: bold;
-    color: white;
-    border: 0 none;
-    border-radius: 1px;
-    cursor: pointer;
-    padding: 10px 5px;
-    margin: 10px 5px;
-    text-decoration: none;
-    border-radius: 15px;
+  text-align: center;
+  width: 200px;
+  height: 50px;
+  font-size: 26px;
+  background: #00CCCC;
+  font-weight: bold;
+  color: white;
+  border: 0 none;
+  border-radius: 1px;
+  cursor: pointer;
+  padding: 10px 5px;
+  margin: 10px 5px;
+  text-decoration: none;
+  border-radius: 15px;
 }
 
 a.buttonNext {
-    text-align: center;
-    width: 200px;
-    height: 50px;
-    font-size: 26px;
-    background: #00CCCC;
-    font-weight: bold;
-    color: white;
-    border: 0 none;
-    border-radius: 1px;
-    cursor: pointer;
-    padding: 10px 5px;
-    margin: 10px 5px;
-    text-decoration: none;
-    border-radius: 15px;
+  text-align: center;
+  width: 200px;
+  height: 50px;
+  font-size: 26px;
+  background: #00CCCC;
+  font-weight: bold;
+  color: white;
+  border: 0 none;
+  border-radius: 1px;
+  cursor: pointer;
+  padding: 10px 5px;
+  margin: 10px 5px;
+  text-decoration: none;
+  border-radius: 15px;
 }
 
 
 
 #alteraFoto{
-    z-index: 2;
-    width: 35px;
-    height:35px;
-    position: relative;
-    top: -50px;
-    right: -50px;
+  z-index: 2;
+  width: 35px;
+  height:35px;
+  position: relative;
+  top: -50px;
+  right: -50px;
 }
 
-.recebeDados{
-    border:none;
-    display: flex;
-    justify-content: center;
+h1{
+  color:#036;
+  margin-bottom:15px;
+  margin-top: -70px;
+  text-align: center;
+}
 
-}*/
+.alunos{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#linkcurso{
+text-align: center;
+width: 135px;
+height: 60px;
+font-size: 18px;
+background: #00CCCC;
+font-weight: bold;
+color: rgb(255, 255, 255)!important;
+border: 0 none;
+cursor: pointer;
+padding: 10px 5px;
+margin: 10px 5px;
+text-decoration: none;
+border-radius: 12px;
+}
+.setinha{
+  
+
+  height: 90px;
+  padding: 80px 55px 0;
+
+}
+#seta{
+ text-align: left;
+ width:50px;
+
+ 
+}
